   files that are created by HappyTools.
 - Added a check to see if the current file is not in the EXCLUSION_FILES of HappyTools.
 - Added a default value for currNoise to functions.backgroundNoise, which should prevent
   HappyTools from crashing when attempting to process a non-chromatogram input file.
 - Added a check to see if the X-axis begin and end can be found (via a bisect search)
   prior to opening a PdfPages object in batchQuantifyChrom.

24 July 2017
 - Added the peakDetectionMin setting to the settings window, including the possibility
   to save this parameter (thereby ensuring that the user does not have to edit the code
   of HappyTools).

24 August 2017
 - Added an option to zoom in on a specific region of the chromatogram using a new button
   in the GUI, that is labelled as "Define the X- and Y-axis limits".

1 September 2017
 - Added an option to overlay the quantitation windows onto a plotted chromatogram via the
   File -> Overlay Quantitation Windows button.
 - The quantitation overlay is added to the overal chromatogram during a batchProcess if the
   createFigure setting is set to True.

11 November 2017
 - Implemented a FWHM determination, that is included in the plots of each individual peak
   of the PDF files.
 - FWHM values will also be printed to the summary if the Peak Quality Criteria are selected
   in the Output Options of Batch Process.
 - Implemented a retention time residual, that is printed to the summary if the Peak Quality
   Criteria are selected in the Output Options of Batch Process.

16 November 2017
 - Implemented automatic integration window border determination using either sigma or FWHM.
 - Two new settings have been added to the settings window, namely 'Peak Detection Edge Method'
   and 'Sigma Value'. The first specifies if the border is the FWHM or based on a user
   specified Sigma value. The latter specifies what Sigma value should be used, if the first
   is set to Sigma.